Beweis für „linkneut, linksinv => Gruppe“ betextet

--- a/skript.tex
+++ b/skript.tex
@@ -125,9 +125,12 @@
 \end{lemma}
 
 \begin{proof}
-	Sei $a\in G$ und $b\in G$ mit $ba=e$. Nach (I') gibt es $c\in G$ mit $cb=e$. Also $ab=eab=cbab=ceb=cb=e$.
+	Sei $a\in G$ und $b\in G$ das dazugehörige Linksinverse mit $ba=e$.
+	Nun gibt es auch $c\in G$ mit $cb=e$.
+	Also gilt $ab=eab=cbab=ceb=cb=e$ und \(b = a^{-1}\) ist auch rechtsinvers zu \(a\).
 
-	Sei nun $a\in G$, es gilt $ae=a(\Inv aa)=ea=a$.
+	Nun gilt für alle $a\in G$, dass $ae=a(\Inv aa)=ea=a$ ist.
+	Somit ist \(e\) auch rechstneutral und die Gruppenaxiome gelten.
 \end{proof}
 
 \begin{lemma}
